added name and value to forms

--- a/main.html
+++ b/main.html
@@ -10,65 +10,65 @@
         <Fieldset>
             <form id="startForm">
                 <label for ="health">Health and Wellness</label>
-                <input type="radio" id="health", class=""><br>
+                <input type="radio" id="health", class="" name="Selector" value="health"><br>
                 <label for ="education">Education</label>
-                <input type="radio", id="education", class=""><br>
+                <input type="radio", id="education", class="" name="Selector" value="education"><br>
                 <label for ="financial">Financial and Legal Services</label>
-                <input type="radio", id="financial", class=""><br>
+                <input type="radio", id="financial", class="" name="Selector" value="financial"><br>
                 <label for ="community">Community Organizations</label>
-                <input type="radio", id="community", class=""><br>
+                <input type="radio", id="community", class="" name="Selector" value="community"><br>
                 <label for ="employment">Employment and Homelessness</label>
-                <input type="radio", id="employment", class=""><br>
+                <input type="radio", id="employment", class="" name="Selector" value="employment"><br>
             </form>
         </Fieldset>
         <fieldset>
             <form id="healthForm">
                 <label for ="healthCareBen">Health Care Benefits</label>
-                <input type="checkbox" id="healthCareBen", class""><br>
+                <input type="checkbox" id="healthCareBen", class"" name="Selector" value="healthCareBen"><br>
                 <label for ="menHealth">Mental Health</label>
-                <input type="checkbox" id="menHealth", class""><br>
+                <input type="checkbox" id="menHealth", class"" name="Selector" value="menHealth"><br>
                 <label for ="subsAbuse">Substance Abuse</label>
-                <input type="checkbox" id="subsAbuse", class""><br>
+                <input type="checkbox" id="subsAbuse", class"" name="Selector" value="subsAbuse"><br>
             </form>
         </fieldset>
         <fieldset>
                 <form id="edForm">
                     <label for ="montGi">Montgomery GI Bill</label>
-                    <input type="checkbox" id="montGi", class""><br>
+                    <input type="checkbox" id="montGi", class"" name="Selector" value="montGi"><br>
                     <label for ="post911">Post 911 GI Bill</label>
-                    <input type="checkbox" id="post911", class""><br>
+                    <input type="checkbox" id="post911", class"" name="Selector" value="post911"><br>
                     <label for ="vocRehab">VOC REHAB</label>
-                    <input type="checkbox" id="vocRehab", class""><br>
+                    <input type="checkbox" id="vocRehab", class"" name="Selector" value="vocRehab"><br>
                 </form>
         </fieldset>
         <fieldset>
                 <form id="finForm">
                     <label for ="busLoan">Business Loans</label>
-                    <input type="checkbox" id="busLoan", class""><br>
+                    <input type="checkbox" id="busLoan", class"" name="Selector" value="busLoan"><br>
                     <label for ="homLoan">VA Home Loans</label>
-                    <input type="checkbox" id="homLoan", class""><br>
+                    <input type="checkbox" id="homLoan", class"" name="Selector" value="homLoan"><br>
                     <label for ="lglSer">Legal Services</label>
-                    <input type="checkbox" id="lglSer", class""><br>
+                    <input type="checkbox" id="lglSer", class"" name="Selector" value="lglSer"><br>
                 </form>
         </fieldset>
         <fieldset>
                 <form id="comOrgFrom">
                     <label for ="vfw">Veterans of Foreign Wars</label>
-                    <input type="checkbox" id="vfw", class""><br>
+                    <input type="checkbox" id="vfw", class"" name="Selector" value="vfw"><br>
                     <label for ="al">American Legion</label>
-                    <input type="checkbox" id="al", class""><br>
+                    <input type="checkbox" id="al", class"" name="Selector" value="al"><br>
                     <label for ="wwp">Wounded Warrior Project</label>
-                    <input type="checkbox" id="wwp", class""><br>
+                    <input type="checkbox" id="wwp", class"" name="Selector" value="wwp"><br>
                 </form>
         </fieldset>
         <fieldset>
                 <form id="employAndHome">
                     <label for ="veoa">Vetrans' Employment Opportunities Act</label>
-                    <input type="checkbox" id="veoa", class""><br>
+                    <input type="checkbox" id="veoa", class"" name="Selector" value="veoa"><br>
                     <label for ="vra">Vetrans' Recruitment Appointment</label>
-                    <input type="checkbox" id="vra", class""><br>
+                    <input type="checkbox" id="vra", class"" name="Selector" value="vra"><br>
                     <label for ="cha">Compass Housing Alliance</label>
-                    <input type="checkbox" id="cha", class""><br>
+                    <input type="checkbox" id="cha", class"" name="Selector" value="cha"><br>
                 </form>
         </fieldset>
     </div>
