added next button

--- a/main.html
+++ b/main.html
@@ -32,45 +32,46 @@
             </form>
         </fieldset>
         <fieldset>
-                <form id="edForm">
-                    <label for ="montGi">Montgomery GI Bill</label>
-                    <input type="checkbox" id="montGi", class"" name="Selector" value="montGi"><br>
-                    <label for ="post911">Post 911 GI Bill</label>
-                    <input type="checkbox" id="post911", class"" name="Selector" value="post911"><br>
-                    <label for ="vocRehab">VOC REHAB</label>
-                    <input type="checkbox" id="vocRehab", class"" name="Selector" value="vocRehab"><br>
-                </form>
+            <form id="edForm">
+                <label for ="montGi">Montgomery GI Bill</label>
+                <input type="checkbox" id="montGi", class"" name="Selector" value="montGi"><br>
+                <label for ="post911">Post 911 GI Bill</label>
+                <input type="checkbox" id="post911", class"" name="Selector" value="post911"><br>
+                <label for ="vocRehab">VOC REHAB</label>
+                <input type="checkbox" id="vocRehab", class"" name="Selector" value="vocRehab"><br>
+            </form>
         </fieldset>
         <fieldset>
-                <form id="finForm">
-                    <label for ="busLoan">Business Loans</label>
-                    <input type="checkbox" id="busLoan", class"" name="Selector" value="busLoan"><br>
-                    <label for ="homLoan">VA Home Loans</label>
-                    <input type="checkbox" id="homLoan", class"" name="Selector" value="homLoan"><br>
-                    <label for ="lglSer">Legal Services</label>
-                    <input type="checkbox" id="lglSer", class"" name="Selector" value="lglSer"><br>
-                </form>
+            <form id="finForm">
+                <label for ="busLoan">Business Loans</label>
+                <input type="checkbox" id="busLoan", class"" name="Selector" value="busLoan"><br>
+                <label for ="homLoan">VA Home Loans</label>
+                <input type="checkbox" id="homLoan", class"" name="Selector" value="homLoan"><br>
+                <label for ="lglSer">Legal Services</label>
+                <input type="checkbox" id="lglSer", class"" name="Selector" value="lglSer"><br>
+            </form>
         </fieldset>
         <fieldset>
-                <form id="comOrgFrom">
-                    <label for ="vfw">Veterans of Foreign Wars</label>
-                    <input type="checkbox" id="vfw", class"" name="Selector" value="vfw"><br>
-                    <label for ="al">American Legion</label>
-                    <input type="checkbox" id="al", class"" name="Selector" value="al"><br>
-                    <label for ="wwp">Wounded Warrior Project</label>
-                    <input type="checkbox" id="wwp", class"" name="Selector" value="wwp"><br>
-                </form>
+            <form id="comOrgFrom">
+                <label for ="vfw">Veterans of Foreign Wars</label>
+                <input type="checkbox" id="vfw", class"" name="Selector" value="vfw"><br>
+                <label for ="al">American Legion</label>
+                <input type="checkbox" id="al", class"" name="Selector" value="al"><br>
+                <label for ="wwp">Wounded Warrior Project</label>
+                <input type="checkbox" id="wwp", class"" name="Selector" value="wwp"><br>
+            </form>
         </fieldset>
         <fieldset>
-                <form id="employAndHome">
-                    <label for ="veoa">Vetrans' Employment Opportunities Act</label>
-                    <input type="checkbox" id="veoa", class"" name="Selector" value="veoa"><br>
-                    <label for ="vra">Vetrans' Recruitment Appointment</label>
-                    <input type="checkbox" id="vra", class"" name="Selector" value="vra"><br>
-                    <label for ="cha">Compass Housing Alliance</label>
-                    <input type="checkbox" id="cha", class"" name="Selector" value="cha"><br>
-                </form>
+            <form id="employAndHome">
+                <label for ="veoa">Vetrans' Employment Opportunities Act</label>
+                <input type="checkbox" id="veoa", class"" name="Selector" value="veoa"><br>
+                <label for ="vra">Vetrans' Recruitment Appointment</label>
+                <input type="checkbox" id="vra", class"" name="Selector" value="vra"><br>
+                <label for ="cha">Compass Housing Alliance</label>
+                <input type="checkbox" id="cha", class"" name="Selector" value="cha"><br>
+            </form>
         </fieldset>
+        <button>NEXT</button>
     </div>
 </body>
 </html>
