--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Main </title>
+    <title>Main Page</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
@@ -11,16 +11,19 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="#">Nav Item 1</a>
+                            <a href="#HnW">Health and Wellness</a>
                         </li>
                         <li>
-                            <a href="#">Nav Item 2</a>
+                            <a href="#Edu">Education</a>
                         </li>
                         <li>
-                            <a href="#">Nav Item 3</a>
+                            <a href="#FnL">Financial and Legal Services</a>
                         </li>
                         <li>
-                            <a href="#">Nav Item 4</a>
+                            <a href="#CO">Community Organizations</a>
+                        </li>
+                        <li>
+                            <a href="#EnH">Employment and Homelessness</a>
                         </li>
                     </ul>
                 </nav>
