removed redundant / unused code. working on form query function

--- a/main.html
+++ b/main.html
@@ -4,7 +4,6 @@
     <title>Main </title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
-    <script src="main.js"></script>
 </head>
 <body>
         <header>
@@ -36,15 +35,15 @@
                 <Fieldset>
                 <form id="startForm">
                 <label for ="health">Health and Wellness</label>
-                <input type="radio" id="health", class="" name="health" value="health"><br>
+                <input type="radio" id="health", class="first" name="health" value="health"><br>
                 <label for ="education">Education</label>
-                <input type="radio", id="education", class="" name="education" value="education"><br>
+                <input type="radio", id="education", class="first" name="education" value="education"><br>
                 <label for ="financial">Financial and Legal Services</label>
-                <input type="radio", id="financial", class="" name="financial" value="financial"><br>
+                <input type="radio", id="financial", class="first" name="financial" value="financial"><br>
                 <label for ="community">Community Organizations</label>
-                <input type="radio", id="community", class="" name="community" value="community"><br>
+                <input type="radio", id="community", class="first" name="community" value="community"><br>
                 <label for ="employment">Employment and Homelessness</label>
-                <input type="radio", id="employment", class="" name="employment" value="employment"><br>
+                <input type="radio", id="employment", class="first" name="employment" value="employment"><br>
             </form>
         </Fieldset>
         <fieldset>
@@ -99,5 +98,6 @@
         </fieldset>
         <button id="next">NEXT</button>
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
