--- a/main.html
+++ b/main.html
@@ -44,6 +44,7 @@
                 <input type="radio", id="community", class="first" name="community" value="community"><br>
                 <label for ="employment">Employment and Homelessness</label>
                 <input type="radio", id="employment", class="first" name="employment" value="employment"><br>
+                <button type="submit" id="startNext">NEXT</button>
             </form>
         </Fieldset>
         <fieldset>
@@ -54,6 +55,7 @@
                 <input type="checkbox" id="menHealth", class"" name="menHealth" value="menHealth"><br>
                 <label for ="subsAbuse">Substance Abuse</label>
                 <input type="checkbox" id="subsAbuse", class"" name="subsAbuse" value="subsAbuse"><br>
+                <button type="submit" id="healthNext">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
@@ -64,6 +66,7 @@
                 <input type="checkbox" id="post911", class"" name="post911" value="post911"><br>
                 <label for ="vocRehab">VOC REHAB</label>
                 <input type="checkbox" id="vocRehab", class"" name="vocRehab" value="vocRehab"><br>
+                <button type="submit" id="eduNext">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
@@ -74,6 +77,7 @@
                 <input type="checkbox" id="homLoan", class"" name="homLoan" value="homLoan"><br>
                 <label for ="lglSer">Legal Services</label>
                 <input type="checkbox" id="lglSer", class"" name="lglSer" value="lglSer"><br>
+                <button type="submit" id="finNext">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
@@ -84,6 +88,7 @@
                 <input type="checkbox" id="al", class"" name="al" value="al"><br>
                 <label for ="wwp">Wounded Warrior Project</label>
                 <input type="checkbox" id="wwp", class"" name="wwp" value="wwp"><br>
+                <button type="submit" id="commNext">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
@@ -94,9 +99,9 @@
                 <input type="checkbox" id="vra", class"" name="vra" value="vra"><br>
                 <label for ="cha">Compass Housing Alliance</label>
                 <input type="checkbox" id="cha", class"" name="cha" value="cha"><br>
+                <button type="submit" id="employNext">NEXT</button>
             </form>
         </fieldset>
-        <button id="next">NEXT</button>
     </div>
     <script src="js/main.js"></script>
 </body>
