--- a/main.html
+++ b/main.html
@@ -29,11 +29,11 @@
                 </nav>
             </header>
             <div class="force">
-            <img id="airforce" img src="img/airforce 300px.jpg">
-            <img id="army" img src="img/army 300px.jpg">
-            <img id="navy" img src="img/navy 300px.jpg">
-            <img id="coast" img src="img/coast 300.jpg">
-            <img id="marine" img src="img/marines 300px.jpg">
+            <img id="airforce" img src="img/airforce 300px.png">
+            <img id="army" img src="img/army 300px.png">
+            <img id="navy" img src="img/navy 300px.png">
+            <img id="coast" img src="img/coast 300.png">
+            <img id="marine" img src="img/marines 300px.png">
             </div>
             <div id="questions">
                 <Fieldset>
