--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     </div>
 </section>
 <section>
-    <img id="profile" img src="img/the.jamilah_resize.jpg">
+    <img id="profile" img src="img/Mike.jpg">
     <div>
         <h2>Jamilah McWilliams aka the.jamilah</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Scelerisque fermentum dui faucibus in ornare quam. Odio eu feugiat pretium nibh ipsum. Adipiscing bibendum est ultricies integer quis auctor elit sed. Nam at lectus urna duis convallis convallis. Odio morbi quis commodo odio aenean. Quisque sagittis purus sit amet volutpat. Nisl purus in mollis nunc sed id. At volutpat diam ut venenatis tellus. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Dui sapien eget mi proin sed libero. Felis bibendum ut tristique et. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Sem nulla pharetra diam sit amet nisl. Auctor elit sed vulputate mi sit amet mauris commodo. Varius morbi enim nunc faucibus a pellentesque sit amet.
