--- a/main.html
+++ b/main.html
@@ -46,6 +46,7 @@
                 <label for ="employment">Employment and Homelessness</label>
                 <input type="radio", id="employment", class="" name="employment" value="employment"><br>
             </form>
+        </table>
         </Fieldset>
         <fieldset>
             <form id="healthForm">
@@ -78,7 +79,7 @@
             </form>
         </fieldset>
         <fieldset>
-            <form id="comOrgFrom">
+            <form id="comOrgForm">
                 <label for ="vfw">Veterans of Foreign Wars</label>
                 <input type="checkbox" id="vfw", class"" name="vfw" value="vfw"><br>
                 <label for ="al">American Legion</label>
