preventdefault working, radio buttons name match, valueIn needs to be parsed

--- a/main.html
+++ b/main.html
@@ -35,15 +35,15 @@
                 <Fieldset>
                 <form id="startForm">
                 <label for ="health">Health and Wellness</label>
-                <input type="radio" id="health", class="first" name="health" value="health"><br>
+                <input type="radio" id="health", class="first" name="formStart" value="health"><br>
                 <label for ="education">Education</label>
-                <input type="radio", id="education", class="first" name="education" value="education"><br>
+                <input type="radio", id="education", class="first" name="formStart" value="education"><br>
                 <label for ="financial">Financial and Legal Services</label>
-                <input type="radio", id="financial", class="first" name="financial" value="financial"><br>
+                <input type="radio", id="financial", class="first" name="formStart" value="financial"><br>
                 <label for ="community">Community Organizations</label>
-                <input type="radio", id="community", class="first" name="community" value="community"><br>
+                <input type="radio", id="community", class="first" name="formStart" value="community"><br>
                 <label for ="employment">Employment and Homelessness</label>
-                <input type="radio", id="employment", class="first" name="employment" value="employment"><br>
+                <input type="radio", id="employment", class="first" name="formStart" value="employment"><br>
                 <button type="submit" id="startNext">NEXT</button>
             </form>
         </Fieldset>
