--- a/main.html
+++ b/main.html
@@ -50,55 +50,55 @@
         <fieldset>
             <form id="healthForm">
                 <label for ="healthCareBen">Health Care Benefits</label>
-                <input type="checkbox" id="healthCareBen", class"" name="healthCareBen" value="healthCareBen"><br>
+                <input type="checkbox" id="healthCareBen", class"first" name="healthCareBen" value="healthCareBen"><br>
                 <label for ="menHealth">Mental Health</label>
-                <input type="checkbox" id="menHealth", class"" name="menHealth" value="menHealth"><br>
+                <input type="checkbox" id="menHealth", class"first" name="menHealth" value="menHealth"><br>
                 <label for ="subsAbuse">Substance Abuse</label>
-                <input type="checkbox" id="subsAbuse", class"" name="subsAbuse" value="subsAbuse"><br>
+                <input type="checkbox" id="subsAbuse", class"first" name="subsAbuse" value="subsAbuse"><br>
                 <button type="submit" id="healthNext">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
             <form id="edForm">
                 <label for ="montGi">Montgomery GI Bill</label>
-                <input type="checkbox" id="montGi", class"" name="montGi" value="montGi"><br>
+                <input type="checkbox" id="montGi", class"first" name="montGi" value="montGi"><br>
                 <label for ="post911">Post 911 GI Bill</label>
-                <input type="checkbox" id="post911", class"" name="post911" value="post911"><br>
+                <input type="checkbox" id="post911", class"first" name="post911" value="post911"><br>
                 <label for ="vocRehab">VOC REHAB</label>
-                <input type="checkbox" id="vocRehab", class"" name="vocRehab" value="vocRehab"><br>
+                <input type="checkbox" id="vocRehab", class"first" name="vocRehab" value="vocRehab"><br>
                 <button type="submit" id="eduNext">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
             <form id="finForm">
                 <label for ="busLoan">Business Loans</label>
-                <input type="checkbox" id="busLoan", class"" name="busLoan" value="busLoan"><br>
+                <input type="checkbox" id="busLoan", class"first" name="busLoan" value="busLoan"><br>
                 <label for ="homLoan">VA Home Loans</label>
-                <input type="checkbox" id="homLoan", class"" name="homLoan" value="homLoan"><br>
+                <input type="checkbox" id="homLoan", class"first" name="homLoan" value="homLoan"><br>
                 <label for ="lglSer">Legal Services</label>
-                <input type="checkbox" id="lglSer", class"" name="lglSer" value="lglSer"><br>
+                <input type="checkbox" id="lglSer", class"first" name="lglSer" value="lglSer"><br>
                 <button type="submit" id="finNext">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
-            <form id="comOrgFrom">
+            <form id="comOrgForm">
                 <label for ="vfw">Veterans of Foreign Wars</label>
-                <input type="checkbox" id="vfw", class"" name="vfw" value="vfw"><br>
+                <input type="checkbox" id="vfw", class"first" name="vfw" value="vfw"><br>
                 <label for ="al">American Legion</label>
-                <input type="checkbox" id="al", class"" name="al" value="al"><br>
+                <input type="checkbox" id="al", class"first" name="al" value="al"><br>
                 <label for ="wwp">Wounded Warrior Project</label>
-                <input type="checkbox" id="wwp", class"" name="wwp" value="wwp"><br>
+                <input type="checkbox" id="wwp", class"first" name="wwp" value="wwp"><br>
                 <button type="submit" id="commNext">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
             <form id="employAndHome">
                 <label for ="veoa">Vetrans' Employment Opportunities Act</label>
-                <input type="checkbox" id="veoa", class"" name="veoa" value="veoa"><br>
+                <input type="checkbox" id="veoa", class"first" name="veoa" value="veoa"><br>
                 <label for ="vra">Vetrans' Recruitment Appointment</label>
-                <input type="checkbox" id="vra", class"" name="vra" value="vra"><br>
+                <input type="checkbox" id="vra", class"first" name="vra" value="vra"><br>
                 <label for ="cha">Compass Housing Alliance</label>
-                <input type="checkbox" id="cha", class"" name="cha" value="cha"><br>
+                <input type="checkbox" id="cha", class"first" name="cha" value="cha"><br>
                 <button type="submit" id="employNext">NEXT</button>
             </form>
         </fieldset>
