--- a/main.html
+++ b/main.html
@@ -28,11 +28,11 @@
                 </nav>
             </header>
             <div class="force">
-            <img id="airforce" img src="img/airforce 300px.jpg">
-            <img id="army" img src="img/army 300px.jpg">
-            <img id="navy" img src="img/navy 300px.jpg">
-            <img id="marine" img src="img/marines 300px.jpg">
-            <img id="coast" img src="img/coast 300.jpg">
+            <img id="airforce" img src="img/airforce 300px.png">
+            <img id="army" img src="img/army 300px.png">
+            <img id="navy" img src="img/navy 300px.png">
+            <img id="marine" img src="img/marines 300px.png">
+            <img id="coast" img src="img/coast 300.png">
             </div>
             <div id="questions">
                 <Fieldset>
@@ -106,6 +106,18 @@
                 <button type="submit" id="employNext">NEXT</button>
             </form>
         </fieldset>
+        <table id="hcare"></table>
+        <div id="render"> 
+                <ul id="info">
+                    <li id = "name"></li>
+                    <li id = "location"></li>
+                    <li id = "hours"></li>
+                    <li id = "phone"></li>
+                    <li id = "email"></li>
+                    <li id = "link"></li>
+                </ul>
+    </div>
+    
         <button id="next">NEXT</button>
     </body>
     </div>
