--- a/main.html
+++ b/main.html
@@ -53,55 +53,55 @@
         </Fieldset>
         <fieldset>
             <form id="healthForm">
-                <input type="radio" id="healthCareBen", class"first" name="healthCareBen" value="healthCareBen">
+                <input type="radio" id="healthCareBen", class="second" name="formHealth" value="healthCareBen">
                 <label for ="healthCareBen">Health Care Benefits</label>
-                <input type="radio" id="menHealth", class"first" name="menHealth" value="menHealth">
+                <input type="radio" id="menHealth", class="second" name="formHealth" value="menHealth">
                 <label for ="menHealth">Mental Health</label>
-                <input type="radio" id="subsAbuse", class"first" name="subsAbuse" value="subsAbuse">
+                <input type="radio" id="subsAbuse", class="second" name="formHealth" value="subsAbuse">
                 <label for ="subsAbuse">Substance Abuse</label>
                 <button type="submit" id="healthNext" class="next">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
             <form id="edForm">
-                <input type="radio" id="montGi", class"first" name="montGi" value="montGi">
+                <input type="radio" id="montGi", class="third" name="formEd" value="montGi">
                 <label for ="montGi">Montgomery GI Bill</label>
-                <input type="radio" id="post911", class"first" name="post911" value="post911">
+                <input type="radio" id="post911", class="third" name="formEd" value="post911">
                 <label for ="post911">Post 911 GI Bill</label>
-                <input type="radio" id="vocRehab", class"first" name="vocRehab" value="vocRehab">
+                <input type="radio" id="vocRehab", class="third" name="formEd" value="vocRehab">
                 <label for ="vocRehab">VOC REHAB</label>
                 <button type="submit" id="eduNext" class="next">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
             <form id="finForm">
-                <input type="radio" id="busLoan", class"first" name="busLoan" value="busLoan">
+                <input type="radio" id="busLoan", class="fourth" name="formFin" value="busLoan">
                 <label for ="busLoan">Business Loans</label>
-                <input type="radio" id="homLoan", class"first" name="homLoan" value="homLoan">
+                <input type="radio" id="homLoan", class="fourth" name="formFin" value="homLoan">
                 <label for ="homLoan">VA Home Loans</label>
-                <input type="radio" id="lglSer", class"first" name="lglSer" value="lglSer">
+                <input type="radio" id="lglSer", class="fourth" name="formFin" value="lglSer">
                 <label for ="lglSer">Legal Services</label>
                 <button type="submit" id="finNext" class="next">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
             <form id="comOrgForm">
-                <input type="radio" id="vfw", class"first" name="vfw" value="vfw">
+                <input type="radio" id="vfw", class="fifth" name="formComm" value="vfw">
                 <label for ="vfw">Veterans of Foreign Wars</label>
-                <input type="radio" id="al", class"first" name="al" value="al">
+                <input type="radio" id="al", class="fifth" name="formComm" value="al">
                 <label for ="al">American Legion</label>
-                <input type="radio" id="wwp", class"first" name="wwp" value="wwp">
+                <input type="radio" id="wwp", class="fifth" name="formComm" value="wwp">
                 <label for ="wwp">Wounded Warrior Project</label>
                 <button type="submit" id="commNext" class="next">NEXT</button>
             </form>
         </fieldset>
         <fieldset>
             <form id="employAndHome">
-                <input type="radio" id="veoa", class"first" name="veoa" value="veoa">
+                <input type="radio" id="veoa", class="sixth" name="formEmp" value="veoa">
                 <label for ="veoa">Vetrans' Employment Opportunities Act</label>
-                <input type="radio" id="vra", class"first" name="vra" value="vra">
+                <input type="radio" id="vra", class="sixth" name="formEmp" value="vra">
                 <label for ="vra">Vetrans' Recruitment Appointment</label>
-                <input type="radio" id="cha", class"first" name="cha" value="cha">
+                <input type="radio" id="cha", class="sixth" name="formEmp" value="cha">
                 <label for ="cha">Compass Housing Alliance</label>
                 <button type="submit" id="employNext" class="next">NEXT</button>
             </form>
