stylin and profilin

--- a/intro.html
+++ b/intro.html
@@ -3,16 +3,13 @@
 <head>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="intro.css">
-  <title>Veteran Resources</title>
+  <title>Veteran Resources Project</title>
 </head>
 <body>
-    <div class="menu menu--top"></div>
-
-    Hide menus when scrolling down. Vanilla Javascript<br>
-    <br><br><br>
-    by <a target="_blank" href="http://joacimnilsson.se?ref=joacimnilsson">Joacim Nilsson</a>
-    
-    <div class="menu menu--bottom"></div>
-<script src="intro.css"></script>
+  <header>
+    <h1>Veteran Resources</h1>
+  </header>
+<img id="flag" img src="img/flags for gradient resize.png">
+<script src="intro.js"></script>
 </body>
 </html>
