--- a/about.html
+++ b/about.html
@@ -13,16 +13,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#Nav1">Sgt Belly</a>
+                    <a href="https://www.linkedin.com/in/jamesmorgandenton">James Denton</a>
                 </li>
                 <li>
-                    <a href="#Nav2">Bus Driver AK</a>
+                    <a href="https://www.linkedin.com/in/mkermes/">Bus Driver AK</a>
                 </li>
                 <li>
-                    <a href="#Nav3">The Jamilah</a>
+                    <a href="https://www.linkedin.com/in/jamilah-mcwilliams/">The Jamilah</a>
                 </li>
                 <li>
-                    <a href="#Nav4">HRH</a>
+                    <a href="https://www.linkedin.com/in/harry-hayden-a45a8a162/">HRH</a>
                 </li>
             </ul>
         </nav>
@@ -45,7 +45,7 @@
     <img id="profile" img src="img/Mike.jpg">
     <div>
         <h2>Michael Kermes</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Scelerisque fermentum dui faucibus in ornare quam. Odio eu feugiat pretium nibh ipsum. Adipiscing bibendum est ultricies integer quis auctor elit sed. Nam at lectus urna duis convallis convallis. Odio morbi quis commodo odio aenean. Quisque sagittis purus sit amet volutpat. Nisl purus in mollis nunc sed id. At volutpat diam ut venenatis tellus. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Dui sapien eget mi proin sed libero. Felis bibendum ut tristique et. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Sem nulla pharetra diam sit amet nisl. Auctor elit sed vulputate mi sit amet mauris commodo. Varius morbi enim nunc faucibus a pellentesque sit amet.
+        <p>Mike was born and raised in Alaska, growing up with a passion for technology and gaming. After 5 years as a mechanic in the Navy, Mike shifted his focus back to tech. Since then he has picked up a background in I.T. and coding, developing the skills necessary for a future to work with emerging technologies and game development. 
         </p>
     </div>
 </section>
@@ -53,16 +53,15 @@
     <img id="profile" img src="img/the.jamilah.png">
     <div>
         <h2>Jamilah McWilliams aka the.jamilah</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Scelerisque fermentum dui faucibus in ornare quam. Odio eu feugiat pretium nibh ipsum. Adipiscing bibendum est ultricies integer quis auctor elit sed. Nam at lectus urna duis convallis convallis. Odio morbi quis commodo odio aenean. Quisque sagittis purus sit amet volutpat. Nisl purus in mollis nunc sed id. At volutpat diam ut venenatis tellus. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Dui sapien eget mi proin sed libero. Felis bibendum ut tristique et. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Sem nulla pharetra diam sit amet nisl. Auctor elit sed vulputate mi sit amet mauris commodo. Varius morbi enim nunc faucibus a pellentesque sit amet.
-        </p>
+        <p>Jamilah pronounced (Jah-mee-lah) aka the.jamilah is a native Seattleite and has had a career in hotels, restaurants and night life. During her tenure in the industry she has worked with companies such as the Four Seasons, Fairmont Hotels and Hilton hotels to name a few.  Jamilah also has a degree in Culinary Arts and Hospitality Management. Her recent projects include project management, sales, marketing and technology for up and coming chef owner/operators. She has always had a passion for technology and is currently a student at Code Fellows in pursuit of the next chapter in her career as a software developer.</p>
     </div>
 </section>
 <section>
     <img id="profile" img src="img/Harry_resize.jpg">
     <div>
         <h2>Harry Hayden</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Scelerisque fermentum dui faucibus in ornare quam. Odio eu feugiat pretium nibh ipsum. Adipiscing bibendum est ultricies integer quis auctor elit sed. Nam at lectus urna duis convallis convallis. Odio morbi quis commodo odio aenean. Quisque sagittis purus sit amet volutpat. Nisl purus in mollis nunc sed id. At volutpat diam ut venenatis tellus. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Dui sapien eget mi proin sed libero. Felis bibendum ut tristique et. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Sem nulla pharetra diam sit amet nisl. Auctor elit sed vulputate mi sit amet mauris commodo. Varius morbi enim nunc faucibus a pellentesque sit amet.
-        </p>
+        <p>HH enjoys working with people in the community and technology.  He hopes to take all of the skills acquired as a student at Code Fellows to better serve his community and grow within the tech industry. 
+            </p>
     </div>
 </section>
 </main>
