--- a/main.html
+++ b/main.html
@@ -8,23 +8,19 @@
 <body>
         <header>
                 <nav>
+                    <span>
                     <ul>
                         <li>
-                            <a href="#HnW">Health and Wellness</a>
+                            <a href="intro.html">Home Page</a>
                         </li>
                         <li>
-                            <a href="#Edu">Education</a>
+                            <a href="main.html">Resource Finder</a>
                         </li>
                         <li>
-                            <a href="#FnL">Financial and Legal Services</a>
-                        </li>
-                        <li>
-                            <a href="#CO">Community Organizations</a>
-                        </li>
-                        <li>
-                            <a href="#EnH">Employment and Homelessness</a>
+                            <a href="about.html">About Us</a>
                         </li>
                     </ul>
+                </span>
                 </nav>
             </header>
             <div class="force">
