--- a/intro.html
+++ b/intro.html
@@ -3,13 +3,24 @@
 <head>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="intro.css">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
   <title>Veteran Resources Project</title>
 </head>
 <body>
   <header>
     <h1>Veteran Resources</h1>
   </header>
-<img id="flag" img src="img/flags for gradient resize.png">
+<!-- <img id="flag" img src="img/flags for gradient resize.png"> -->
+<div id="slogan">
+<p>"This We'll Defend"
+    "Semper Paratus…" (Always Prepared)
+    "Non sibi sed patriae…" (Not Self, but Country)
+    "Semper Fidelis…" (Always Faithful)
+    "Aim High...Fly, Fight, Win…"
+    "The only easy day was yesterday…"
+    "So Others May Live…"
+    </p>
+  </div>
 <script src="intro.js"></script>
 </body>
 </html>
