--- a/intro.html
+++ b/intro.html
@@ -4,23 +4,25 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="intro.css">
   <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
   <title>Veteran Resources Project</title>
 </head>
 <body>
   <header>
     <h1>Veteran Resources</h1>
   </header>
-<!-- <img id="flag" img src="img/flags for gradient resize.png"> -->
+<img id="flag" img src="img/flags for gradient resize.png">
 <div id="slogan">
-<p>"This We'll Defend"
-    "Semper Paratus…" (Always Prepared)
-    "Non sibi sed patriae…" (Not Self, but Country)
-    "Semper Fidelis…" (Always Faithful)
-    "Aim High...Fly, Fight, Win…"
-    "The only easy day was yesterday…"
-    "So Others May Live…"
+    <a href="main.html" id="carl">ENTER SITE</a>
+<p>"This We'll Defend"</br>
+    "Semper Paratus…" (Always Prepared)</br>
+    "Non sibi sed patriae…" (Not Self, but Country)</br>
+    "Semper Fidelis…" (Always Faithful)</br>
+    "Aim High...Fly, Fight, Win…"</br>
+    "The only easy day was yesterday…"</br>
+    "So Others May Live…"</br>
     </p>
-  </div>
+    </div>
 <script src="intro.js"></script>
 </body>
 </html>
