--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
                     <span>
                     <ul>
                         <li>
-                            <a href="intro.html">Home Page</a>
+                            <a href="index.html">Home Page</a>
                         </li>
                         <li>
                             <a href="main.html">Resource Finder</a>
